TestSuite/Syntax/Correct/BarLabelMode-2.tjp
project simple "Simple Project" "$Id" 2000-01-01 2000-01-04

resource tux "Tux"

task t1 "Task1" {
  start 2000-01-01
  length 1d
}

task t2 "Task2" {
  start 2000-01-01
  duration 1d
}

task t3 "Task3" {
  start 2000-01-01
  effort 1d
  allocate tux
}

htmltaskreport "BarLabelMode-2.html" {
  columns name, daily, weekly, monthly
  barlabels load
}

