TestSuite/Syntax/Errors/DepLoop17.tjp
project prj "Loop Detector Test" "$Id" 2000-01-01 - 2000-01-10

task t1 "Task1" {
	task t2 "Task2" {
		end 2000-01-04
    length 1d
	  precedes !t3
	}
	task t3 "Task3" {
		length 1d
		precedes !t2
	}
}

